# CS4453-RL-2048

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: dqn.yaml  dqn_cnn_corner.yaml
scripts/: plot_training.py  random_rollout.py  train_dqn.py  train_dqn_cnn_corner.py  train_ppo.py
src/: README.md  train.py
src/rl2048/: __init__.py
src/rl2048/dqn/: __init__.py  agent.py  networks.py  preprocess.py  replay_buffer.py
src/rl2048/envs/: README.md  __init__.py  game_2048_env.py  logic.py  types.py
src/rl2048/ppo/: __init__.py  ppo_agent.py  ppo_networks.py  rollout_buffer.py
src/rl2048/rewards/: __init__.py  corner_shaped_reward.py  merge_space_max_tile.py
tests/: test_env.py  test_logic.py
