[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs4453-rl-2048"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "gymnasium>=0.29",
]

[project.optional-dependencies]
learn = [
  "torch>=2.2",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
  "pandas>=2.0",
]

dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
